[package]
name = "roommate"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.7.7"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
dotenvy = "0.15.7"
log = "0.4.22"
env_logger = "0.11.5"
